// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker renders with Modal if mode === \`modal\` 1`] = `
<DocumentFragment>
  <div
    data-testid="Modal"
  >
    <div>
      <div>
        Input
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Datepicker renders with Modal if mode === \`modal\` 2`] = `
Object {
  "children": <ForwardRef>
    <mockConstructor
      date={2020-01-08T00:00:00.000Z}
      onChange={[MockFunction]}
      toggleDatepicker={[Function]}
      value="01/08/2020"
    />
  </ForwardRef>,
  "isVisible": false,
  "renderDatepickerAs": [Function],
  "toggleDatepicker": [Function],
  "wrapModalWith": [Function],
  "wrapPopoverWith": [MockFunction],
}
`;

exports[`Datepicker renders with Modal if mode === \`modal\` 3`] = `
Object {
  "date": 2020-01-08T00:00:00.000Z,
  "onChange": [MockFunction],
  "toggleDatepicker": [Function],
  "value": "01/08/2020",
}
`;

exports[`Datepicker renders with Popover by default 1`] = `
<DocumentFragment>
  <div
    data-testid="Popover"
  >
    <div>
      <div>
        Input
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Datepicker renders with Popover by default 2`] = `
Object {
  "children": <ForwardRef>
    <mockConstructor
      date={2020-01-08T00:00:00.000Z}
      onChange={[MockFunction]}
      toggleDatepicker={[Function]}
      value="01/08/2020"
    />
  </ForwardRef>,
  "isVisible": false,
  "renderDatepickerAs": [Function],
  "toggleDatepicker": [Function],
  "wrapModalWith": [Function],
  "wrapPopoverWith": [MockFunction],
}
`;

exports[`Datepicker renders with Popover by default 3`] = `
Object {
  "date": 2020-01-08T00:00:00.000Z,
  "onChange": [MockFunction],
  "toggleDatepicker": [Function],
  "value": "01/08/2020",
}
`;
